[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_rs_driver"
version = "0.1.0"
authors = [
  {name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" }
]
description = "rs_driver for python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy"
]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
  "F401", # Pyflakes: unused-import
]
